try to develop js function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ticket Counter</title>
     <!--daisy khalamma r tailwind css-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -215,7 +215,7 @@
           </div>
 
           <div class="interface grid grid-cols-2 gap-5"></div>
-          <div onclick="handleClick()" id="seats" class="flex justify-between">
+          <div id="seats" class="flex justify-between">
             <div class="grid grid-cols-3 gap-5">
               <button id="A1" class="text-gray-500 px-10 focus:bg-green-300">A</button>
               <div id="A1" class="text-gray-500 btn px-10">A1</div>
