--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <img src="./images/bus-logo.png" alt="" />
             </div>
             <div class="bus-info">
-              <h2 class="text-2xl font-bold">Programming Paribahan</h2>
+              <h2 class="text-2xl font-bold">P-Paribahan</h2>
               <p class="text-sm">Coach-009-WEB | Economy</p>
             </div>
           </div>
@@ -214,60 +214,60 @@
           </div>
 
           <div class="interface grid grid-cols-2 gap-5"></div>
-          <div onclick="handleClick()" id="seats" class="flex justify-between">
+          <div  id="btn" class="flex justify-between">
             <div class="grid grid-cols-3 gap-5">
-              <button id="A1" class="text-gray-500 px-10 focus:bg-green-300">A</button>
-              <div id="A1" class="text-gray-500 btn px-10">A1</div>
-              <div id="A2" class="text-gray-500 btn px-10">A2</div>
-              <div id="B1" class="text-gray-500 px-10">B</div>
-              <div id="B1" class="text-gray-500 btn px-10">B1</div>
-              <div id="B2" class="text-gray-500 btn px-10">B2</div>
-              <div id="C1" class="text-gray-500 px-10">C</div>
-              <div id="C1" class="text-gray-500 btn px-10">C1</div>
-              <div id="C2" class="text-gray-500 btn px-10">C2</div>
-              <div id="D1" class="text-gray-500 px-10">D</div>
-              <div id="D1" class="text-gray-500 btn px-10">D1</div>
-              <div id="D2" class="text-gray-500 btn px-10">D2</div>
-              <div id="E1" class="text-gray-500 px-10">E</div>
-              <div id="E1" class="text-white bg-green-500 btn px-10">E1</div>
-              <div id="E2" class="text-gray-500 btn px-10">E2</div>
-              <div id="F1" class="text-gray-500 px-10">F</div>
-              <div id="F1" class="text-gray-500 btn px-10">F1</div>
-              <div id="F2" class="text-gray-500 btn px-10">F2</div>
-              <div id="G1" class="text-gray-500 px-10">G</div>
-              <div id="G1" class="text-gray-500 btn px-10">G1</div>
-              <div id="G2" class="text-white bg-green-500 btn px-10">G2</div>
-              <div id="H1" class="text-gray-500 px-10">H</div>
-              <div id="H1" class="text-gray-500 btn px-10">H1</div>
-              <div id="H2" class="text-gray-500 btn px-10">H2</div>
-              <div id="I1" class="text-gray-500 px-10">I</div>
-              <div id="I1" class="text-gray-500 btn px-10">I1</div>
-              <div id="I2" class="text-gray-500 btn px-10">I2</div>
-              <div id="J1" class="text-gray-500 px-10">J</div>
-              <div id="J1" class="text-gray-500 btn px-10">J1</div>
-              <div id="J2" class="text-gray-500 btn px-10">J2</div>
+              <button class=" text-gray-500 px-10 focus:bg-green-300"> A </button>
+              <button class="add-btn text-gray-500 btn px-10">A1</button>
+              <button class="add-btn text-gray-500 btn px-10">A2</button>
+              <button class=" text-gray-500 px-10">B</button>
+              <button class="add-btn text-gray-500 btn px-10">B1</button>
+              <button class="add-btn text-gray-500 btn px-10">B2</button>
+              <button class=" text-gray-500 px-10">C</button>
+              <button class="add-btn text-gray-500 btn px-10">C1</button>
+              <button class="add-btn text-gray-500 btn px-10">C2</button>
+              <button class=" text-gray-500 px-10">D</button>
+              <button class="add-btn text-gray-500 btn px-10">D1</button>
+              <button class="add-btn text-gray-500 btn px-10">D2</button>
+              <button class=" text-gray-500 px-10">E</button>
+              <button class="add-btn text-white bg-green-500 btn px-10">E1</button>
+              <button class="add-btn text-gray-500 btn px-10">E2</button>
+              <button class=" text-gray-500 px-10">F</button>
+              <button class="add-btn text-gray-500 btn px-10">F1</button>
+              <button class="add-btn text-gray-500 btn px-10">F2</button>
+              <button class=" text-gray-500 px-10">G</button>
+              <button class="add-btn text-gray-500 btn px-10">G1</button>
+              <button class="add-btn text-white bg-green-500 btn px-10">G2</button>
+              <button class=" text-gray-500 px-10">H</button>
+              <button class="add-btn text-gray-500 btn px-10">H1</button>
+              <button class="add-btn text-gray-500 btn px-10">H2</button>
+              <button class=" text-gray-500 px-10">I</button>
+              <button class="add-btn text-gray-500 btn px-10">I1</button>
+              <button class="add-btn text-gray-500 btn px-10">I2</button>
+              <button class=" text-gray-500 px-10">J</button>
+              <button class="add-btn text-gray-500 btn px-10">J1</button>
+              <button class="add-btn text-gray-500 btn px-10">J2</button>
             </div>
             <div class="grid grid-cols-2 gap-5">
-              <div id="A3" class="text-gray-500 btn px-10">A3</div>
-              <div id="A4" class="text-gray-500 btn px-10">A4</div>
-              <div id="B3" class="text-gray-500 btn px-10">B3</div>
-              <div id="B4" class="text-gray-500 btn px-10">B4</div>
-              <div id="C3" class="text-gray-500 btn px-10">C3</div>
-              <div id="C4" class="text-gray-500 btn px-10">C4</div>
-              <div id="D3" class="text-white bg-green-500 btn px-10">D3</div>
-              <div id="D4" class="text-gray-500 btn px-10">D4</div>
-              <div id="E3" class="text-gray-500 btn px-10">E3</div>
-              <div id="E4" class="text-gray-500 btn px-10">E4</div>
-              <div id="F3" class="text-gray-500 btn px-10">F3</div>
-              <div id="F4" class="text-gray-500 btn px-10">F4</div>
-              <div id="G3" class="text-gray-500 btn px-10">G3</div>
-              <div id="G4" class="text-gray-500 btn px-10">G4</div>
-              <div id="H3" class="text-gray-500 btn px-10">H3</div>
-              <div id="H4" class="text-gray-500 btn px-10">H4</div>
-              <div id="I3" class="text-gray-500 btn px-10">I3</div>
-              <div id="I4" class="text-gray-500 btn px-10">I4</div>
-              <div id="J3" class="text-gray-500 btn px-10">J3</div>
-              <div id="J4" class="text-gray-500 btn px-10">J4</div>
+              <button class="add-btn text-gray-500 btn px-10">A3</button>
+              <button class="add-btn text-gray-500 btn px-10">A4</button>
+              <button class="add-btn text-gray-500 btn px-10">B3</button>
+              <button class="add-btn text-gray-500 btn px-10">B4</button>
+              <button class="add-btn text-gray-500 btn px-10">C3</button>
+              <button class="add-btn text-gray-500 btn px-10">C4</button>
+              <button class="add-btn text-gray-500 btn px-10">D3</button>
+              <button class="add-btn text-gray-500 btn px-10">D4</button>
+              <button class="add-btn text-gray-500 btn px-10">E3</button>
+              <button class="add-btn text-gray-500 btn px-10">E4</button>
+              <button class="add-btn text-gray-500 btn px-10">F3</button>
+              <button class="add-btn text-gray-500 btn px-10">F4</button>
+              <button class="add-btn text-gray-500 btn px-10">G3</button>
+              <button class="add-btn text-gray-500 btn px-10">G4</button>
+              <button class="add-btn text-gray-500 btn px-10">H3</button>
+              <button class="add-btn text-gray-500 btn px-10">H4</button>
+              <button class="add-btn text-gray-500 btn px-10">I3</button>
+              <button class="add-btn text-gray-500 btn px-10">I4</button>
+              <button class="add-btn text-gray-500 btn px-10">J3</button>
+              <button class="add-btn text-gray-500 btn px-10">J4</button>
             </div>
           </div>
         </div>
@@ -279,7 +279,7 @@
             class="ticket-info bg-gray-100 p-5 rounded-lg space-y-3"
           >
             <div class="flex border-dashed border-b-2 py-3">
-              <p class="flex-1 text-lg font-medium">
+              <p id="seat" class="flex-1 text-lg font-medium">
                 Seat
                 <span class="badge bg-green-500 text-white badge-sm">0</span>
               </p>
