--- a/index.html
+++ b/index.html
@@ -216,58 +216,58 @@
           <div class="interface grid grid-cols-2 gap-5"></div>
           <div  id="btn" class="flex justify-between">
             <div class="grid grid-cols-3 gap-5">
-              <button class=" text-gray-500 px-10 focus:bg-green-300"> A </button>
-              <button class="add-btn text-gray-500 btn px-10">A1</button>
-              <button class="add-btn text-gray-500 btn px-10">A2</button>
-              <button class=" text-gray-500 px-10">B</button>
-              <button class="add-btn text-gray-500 btn px-10">B1</button>
-              <button class="add-btn text-gray-500 btn px-10">B2</button>
-              <button class=" text-gray-500 px-10">C</button>
-              <button class="add-btn text-gray-500 btn px-10">C1</button>
-              <button class="add-btn text-gray-500 btn px-10">C2</button>
-              <button class=" text-gray-500 px-10">D</button>
-              <button class="add-btn text-gray-500 btn px-10">D1</button>
-              <button class="add-btn text-gray-500 btn px-10">D2</button>
-              <button class=" text-gray-500 px-10">E</button>
-              <button class="add-btn text-white bg-green-500 btn px-10">E1</button>
-              <button class="add-btn text-gray-500 btn px-10">E2</button>
-              <button class=" text-gray-500 px-10">F</button>
-              <button class="add-btn text-gray-500 btn px-10">F1</button>
-              <button class="add-btn text-gray-500 btn px-10">F2</button>
-              <button class=" text-gray-500 px-10">G</button>
-              <button class="add-btn text-gray-500 btn px-10">G1</button>
-              <button class="add-btn text-white bg-green-500 btn px-10">G2</button>
-              <button class=" text-gray-500 px-10">H</button>
-              <button class="add-btn text-gray-500 btn px-10">H1</button>
-              <button class="add-btn text-gray-500 btn px-10">H2</button>
-              <button class=" text-gray-500 px-10">I</button>
-              <button class="add-btn text-gray-500 btn px-10">I1</button>
-              <button class="add-btn text-gray-500 btn px-10">I2</button>
-              <button class=" text-gray-500 px-10">J</button>
-              <button class="add-btn text-gray-500 btn px-10">J1</button>
-              <button class="add-btn text-gray-500 btn px-10">J2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10 focus:bg-green-300"> A </button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">A1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">A2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">B</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">B1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">B2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">C</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">C1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">C2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">D</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">D1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">D2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">E</button>
+              <button onclick="handleClick(this)" class="add-btn text-white bg-green-500 btn px-10">E1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">E2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">F</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">F1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">F2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">G</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">G1</button>
+              <button onclick="handleClick(this)" class="add-btn text-white bg-green-500 btn px-10">G2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">H</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">H1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">H2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">I</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">I1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">I2</button>
+              <button onclick="handleClick(this)" class=" text-gray-500 px-10">J</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">J1</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">J2</button>
             </div>
             <div class="grid grid-cols-2 gap-5">
-              <button class="add-btn text-gray-500 btn px-10">A3</button>
-              <button class="add-btn text-gray-500 btn px-10">A4</button>
-              <button class="add-btn text-gray-500 btn px-10">B3</button>
-              <button class="add-btn text-gray-500 btn px-10">B4</button>
-              <button class="add-btn text-gray-500 btn px-10">C3</button>
-              <button class="add-btn text-gray-500 btn px-10">C4</button>
-              <button class="add-btn text-gray-500 btn px-10">D3</button>
-              <button class="add-btn text-gray-500 btn px-10">D4</button>
-              <button class="add-btn text-gray-500 btn px-10">E3</button>
-              <button class="add-btn text-gray-500 btn px-10">E4</button>
-              <button class="add-btn text-gray-500 btn px-10">F3</button>
-              <button class="add-btn text-gray-500 btn px-10">F4</button>
-              <button class="add-btn text-gray-500 btn px-10">G3</button>
-              <button class="add-btn text-gray-500 btn px-10">G4</button>
-              <button class="add-btn text-gray-500 btn px-10">H3</button>
-              <button class="add-btn text-gray-500 btn px-10">H4</button>
-              <button class="add-btn text-gray-500 btn px-10">I3</button>
-              <button class="add-btn text-gray-500 btn px-10">I4</button>
-              <button class="add-btn text-gray-500 btn px-10">J3</button>
-              <button class="add-btn text-gray-500 btn px-10">J4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">A3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">A4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">B3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">B4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">C3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">C4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">D3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">D4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">E3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">E4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">F3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">F4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">G3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">G4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">H3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">H4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">I3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">I4</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">J3</button>
+              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">J4</button>
             </div>
           </div>
         </div>
@@ -281,26 +281,20 @@
             <div class="flex border-dashed border-b-2 py-3">
               <p id="seat" class="flex-1 text-lg font-medium">
                 Seat
-                <span class="badge bg-green-500 text-white badge-sm">0</span>
+                <span id="seat-count" class="badge bg-green-500 text-white badge-sm">0</span>
               </p>
               <p class="flex-1 text-lg font-medium">Class</p>
               <p class="text-right text-lg font-medium">Fare</p>
             </div>
             <!-- dynamic items will be added here  -->
-            <div class="flex justify-between">
-              <p>C1</p>
-              <p>Economy</p>
-              <p>550</p>
+            <!-- <div id="select-container"></div> -->
+            <div id="Selected-containar">
+        
             </div>
-            <div class="flex justify-between">
-              <p>C2</p>
-              <p>Economy</p>
-              <p>550</p>
-            </div>
-            <!-- total price  -->
+            <!-- total price -->
             <div class="flex justify-between border-t-2 border-dashed">
               <p class="font-semibold">Total Price</p>
-              <p class="text-lg font-medium">1100</p>
+              <p id="total-price" class="text-lg font-medium">00</p>
             </div>
             <div class="flex hidden text-sm text-red-500 justify-between">
               <p class="font-semibold">Discount</p>
