complete my assignment

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <img src="images/cupon-devider.png" alt="">
 
             <div class="font-raleway justify-center items-center ">
-                <h1 class="font-bold text-3xl text-[#030712]">Couple 20<br>
+                <h1 class="font-bold text-3xl text-[#030712]">COUPLE20<br>
                     <span class="text-[#03071266] text-2xl font-medium ">Coupon Code</span></h1>
             </div>
         </div>
@@ -216,58 +216,58 @@
           <div class="interface grid grid-cols-2 gap-5"></div>
           <div  id="btn" class="flex justify-between">
             <div class="grid grid-cols-3 gap-5">
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10 focus:bg-green-300"> A </button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">A1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">A2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">B</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">B1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">B2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">C</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">C1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">C2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">D</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">D1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">D2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">E</button>
-              <button onclick="handleClick(this)" class="add-btn text-white bg-green-500 btn px-10">E1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">E2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">F</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">F1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">F2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">G</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">G1</button>
-              <button onclick="handleClick(this)" class="add-btn text-white bg-green-500 btn px-10">G2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">H</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">H1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">H2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">I</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">I1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">I2</button>
-              <button onclick="handleClick(this)" class=" text-gray-500 px-10">J</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">J1</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">J2</button>
+              <button class=" text-gray-500 px-10 "> A </button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10 ">A1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10 ">A2</button>
+              <button class=" text-gray-500 px-10">B</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500  text-gray-500 btn px-10">B1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">B2</button>
+              <button class=" text-gray-500 px-10">C</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">C1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">C2</button>
+              <button class=" text-gray-500 px-10">D</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">D1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">D2</button>
+              <button class=" text-gray-500 px-10">E</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">E1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">E2</button>
+              <button class=" text-gray-500 px-10">F</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">F1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">F2</button>
+              <button class=" text-gray-500 px-10">G</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">G1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">G2</button>
+              <button class=" text-gray-500 px-10">H</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">H1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">H2</button>
+              <button class=" text-gray-500 px-10">I</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">I1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">I2</button>
+              <button class=" text-gray-500 px-10">J</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">J1</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">J2</button>
             </div>
             <div class="grid grid-cols-2 gap-5">
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">A3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">A4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">B3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">B4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">C3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">C4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">D3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">D4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">E3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">E4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">F3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">F4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">G3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">G4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">H3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">H4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">I3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">I4</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">J3</button>
-              <button onclick="handleClick(this)" class="add-btn text-gray-500 btn px-10">J4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">A3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">A4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">B3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">B4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">C3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">C4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">D3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">D4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">E3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">E4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">F3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">F4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">G3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">G4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">H3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">H4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">I3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">I4</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">J3</button>
+              <button onclick="handleClick(this)" class="add-btn focus:bg-green-500 text-gray-500 btn px-10">J4</button>
             </div>
           </div>
         </div>
@@ -296,30 +296,19 @@
               <p class="font-semibold">Total Price</p>
               <p id="total-price" class="text-lg font-medium">00</p>
             </div>
-            <div class="flex hidden text-sm text-red-500 justify-between">
+            <div class="flex text-sm text-red-500 justify-between">
               <p class="font-semibold">Discount</p>
-              <p>-0</p>
+              <div class="flex gap-2"><span class="text-red-500">-</span> <p id="discount-amount">00</p></div>
+              
             </div>
-            <div class="relative">
-              <input
-                class="w-full px-4 py-3 outline-none rounded-lg"
-                type="text"
-                placeholder="have a cupon ?"
-              />
-              <label class="input input-bordered flex items-center gap-2">
-                <input type="text" class="grow" placeholder="Search" />
-                <button
-                disabled
-                class="btn absolute right-2 top-2 bg-green-400 btn-sm"
-              >
-                Apply
-              </button>
-              </label>
+            <div class="join">
+              <input id="apply-input-field" type="text" class="input input-bordered join-item" placeholder="grand price"/>
+              <button id="apply-btn" class="btn join-item rounded-r-full"><span class="bg-teal-500 btn text-white ">Apply</span></button>
             </div>
 
             <div class="flex justify-between border-t-2 border-dashed">
               <p class="font-semibold">Grand Total</p>
-              <p class="text-lg font-medium">1100</p>
+              <p id="grand-price" class="text-lg font-medium">00</p>
             </div>
           </div>
 
@@ -340,6 +329,8 @@
                 <span class="label-text text-lg font-medium">Phone Number</span>
               </label>
               <input
+                id="Number-input"
+                disabled
                 type="text"
                 placeholder="password"
                 class="input input-bordered"
@@ -356,7 +347,7 @@
                   required
                 />
               </div>
-              <button disabled class="btn mt-5 bg-green-400 text-wh btn-success">
+              <button id="NextButton"disabled class="btn text-white bg-green-500 text-wh btn-success">
                 Next
               </button>
             </div>
