--- a/success.html
+++ b/success.html
@@ -34,6 +34,6 @@
             </div>
     </div>
 </section>
-<script src="./scripts/utility.js"></script>
+<script src="js/utility.js"></script>
 </body>
 </html>
